fix scrollbar

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -1,6 +1,6 @@
 @import 'swiper/css';
 
-/*::-webkit-scrollbar {
+::-webkit-scrollbar {
   background-color: transparent;
 }
 
@@ -14,7 +14,7 @@
 
 ::-webkit-scrollbar {
   width: 0;
-}*/
+}
 
 .section-reviews {
   padding-bottom: 64px;
